--- a/src/Endzone.UmbracoSocialPluginAdapters/Endzone.UmbracoSocialPluginAdapters.csproj
+++ b/src/Endzone.UmbracoSocialPluginAdapters/Endzone.UmbracoSocialPluginAdapters.csproj
@@ -102,6 +102,7 @@
       <HintPath>..\..\packages\UmbracoCms.Core.7.2.4\lib\SQLCE4Umbraco.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
       <Private>True</Private>
@@ -181,6 +182,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\FacebookController.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="API\TwitterController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
