--- a/src/Endzone.UmbracoSocialPluginAdapters/Endzone.UmbracoSocialPluginAdapters.csproj
+++ b/src/Endzone.UmbracoSocialPluginAdapters/Endzone.UmbracoSocialPluginAdapters.csproj
@@ -187,6 +187,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API\FacebookController.cs" />
+    <Compile Include="API\RssController.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="API\TwitterController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
