--- a/src/Endzone.UmbracoSocialPluginAdapters/Package.xml
+++ b/src/Endzone.UmbracoSocialPluginAdapters/Package.xml
@@ -24,17 +24,17 @@
     Stay in touch via the <a href="https://github.com/EndzoneSoftware/UmbracoSocialPluginAdapters">UmbracoSocialPluginAdapters GitHub repository</a>
 	
 	The following appSettings need to be defined for the feeds to work:
-	- SocialPlugin_FacebookAppId
-    - SocialPlugin_FacebookAppSecret
-    - SocialPlugin_TwitterConsumerKey
-    - SocialPlugin_TwitterConsumerSecret
+	<pre>- SocialPlugin_FacebookAppId
+- SocialPlugin_FacebookAppSecret
+- SocialPlugin_TwitterConsumerKey
+- SocialPlugin_TwitterConsumerSecret</pre>
 	
 	It is also necesary to set the correct URLs in the feed configuration in JavaScript, e.g.:
 	<pre>	
-	twitter: {
-		id: 'some_handle',
-		url: '/umbraco/UmbracoSocialPluginAdapters/Twitter/Get'
-	},
+twitter: {
+	id: 'some_handle',
+	url: '/umbraco/UmbracoSocialPluginAdapters/Twitter/Get'
+},
 	</pre>
 	!]]></readme>
   </info>
